<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/askInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/internet"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/custom_btn"
        />
    <Button
        android:id="@+id/askRecordAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/audio_source"
        app:layout_constraintTop_toBottomOf="@+id/askInternet"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/custom_btn"
        />
    <Button
        android:id="@+id/askReadExternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/read_external"
        app:layout_constraintTop_toBottomOf="@+id/askRecordAudio"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/custom_btn"
        />
    <Button
        android:id="@+id/askWriteExternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/write_external"
        app:layout_constraintTop_toBottomOf="@+id/askReadExternal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/custom_btn"
        />
    <Button
        android:id="@+id/askCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@+id/askWriteExternal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/custom_btn"
        />


</androidx.constraintlayout.widget.ConstraintLayout>